<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminEdits">

    <TextView
        android:id="@+id/titleBranch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anton"
        android:text="@string/welcome_admin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:layout_margin="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edBranch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:onClick="openSelectBranchActivity"
            android:text="@string/edit_branches" />

        <Button
            android:id="@+id/edUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/blue"
            android:layout_weight="1"
            android:onClick="openEditUsers"
            android:text="@string/edit_users" />

    </LinearLayout>

    <Button
        android:id="@+id/prevBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:gravity="end"
        android:text="Logout"
        android:textColor="@color/black"
        android:onClick="goBack"/>

</LinearLayout>