<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovingAssEditHourly"
    android:paddingLeft="20sp"
    android:paddingRight="20sp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/crntHourlyRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@string/dialogCRtitle"
            android:textColor="#2196F3"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/moveAssCrntRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="0.00"
            android:textSize="20dp"
            android:minHeight="48dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setNewHourlyRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anton"
            android:text="@string/dilogboxtile"
            android:textColor="#2196F3"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/moveAssNewHourlyRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"


            android:hint="hourly rate (0.00)"
            android:inputType="textPersonName"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/anton"
                android:text="@string/save" />

            <Button
                android:id="@+id/discardBtn"
                android:layout_width="183dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/anton"
                android:text="@string/discard" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>